--- a/package.json
+++ b/package.json
@@ -31,5 +31,8 @@
     "eslint": "^8.31.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.9.4"
+  },
+  "dependencies": {
+    "@risotto/value-objects": "^1.1.1"
   }
 }
